--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "greendrop",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,10 +13,10 @@
     "expo": "~54.0.7",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.6",
+    "expo-router": "^6.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
