--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "assetBundlePatterns": ["assets/models/*"],
     "splash": {
       "image": "./assets/Logo.png",
       "resizeMode": "contain",
