--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
     "expo": "~54.0.7",
+    "expo-blur": "~15.0.7",
     "expo-camera": "~13.4.4",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
     "expo-router": "^6.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "expo-blur": "~15.0.7"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
